<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Situations.Onepage.OP_UBP_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/shape_menu_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_logo_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/crntPage"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/russo_one"
            android:gravity="center"
            android:text="@string/ubp"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintEnd_toStartOf="@id/btnSettings"/>

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintDimensionRatio=""
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_menu"
            tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="632dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:background="@drawable/shape_instruction"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/topMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtUBPMP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/ubp_op"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ubp_op"
            android:scaleType="fitCenter"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_menu_top"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnBookmark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgHome"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_home"
                app:layout_constraintBottom_toTopOf="@+id/txtHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtHome"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-light"
                android:text="@string/bottomMenuHome"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnBookmark"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnPhone"
            app:layout_constraintStart_toEndOf="@+id/btnHome"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBookmark"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_help"
                app:layout_constraintBottom_toTopOf="@+id/txtBookmark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtBookmark"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-light"
                android:text="@string/bottomMenuBookmark"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/btnPhone"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/shape_voice_assistant"
            android:padding="15dp"
            app:layout_constraintDimensionRatio=":"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginVertical="15dp"
            android:layout_gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnBook"
            app:layout_constraintStart_toEndOf="@+id/btnPhone"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgSearch"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_search"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txtSearch"/>

            <TextView
                android:id="@+id/txtSearch"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/bottomMenuSearch"
                android:textAlignment="center"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnBook"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginVertical="15dp"
            android:layout_gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBook"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_book"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txtBook"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/txtBook"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/bottomMenuBook"
                android:textAlignment="center"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>