<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsMenu"
        android:layout_width="340dp"
        android:layout_height="670dp"
        android:background="#40670101"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchSMP"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:background="#D9D9D9"
            android:checked="true"
            android:enabled="true"
            android:fontFamily="@font/roboto"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="Кнопка вызова бригады СМП"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbTint="@drawable/thumb"
            app:trackTint="@drawable/track" />

        <LinearLayout
            android:id="@+id/layoutLanguage"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:background="#D9D9d9"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchSMP">

            <TextView
                android:id="@+id/txtLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="Язык интерфейса [Отключено]"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerLanguage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="#000000"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutVariants"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginTop="10dp"
            android:background="#D9D9D9"
            android:orientation="vertical"
            android:paddingHorizontal="2dp"
            android:paddingTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutLanguage">

            <TextView
                android:id="@+id/txtVariants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto"
                android:text="Выбор варианта представления инструкций"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="245dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layoutMultipage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgMultipage"
                        android:layout_width="90dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/ic_multipage" />

                    <TextView
                        android:id="@+id/txtMultipage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto"
                        android:text="@string/u_Multipage"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutOnepage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgOnepage"
                        android:layout_width="90dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/ic_onepage" />

                    <TextView
                        android:id="@+id/txtOnepage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto"
                        android:text="@string/Onepage"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutSlide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgSlide"
                        android:layout_width="90dp"
                        android:layout_height="220dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/ic_slide" />

                    <TextView
                        android:id="@+id/txtSlide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto"
                        android:text="@string/Slide"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="#D9D9D9"
            android:fontFamily="sans-serif"
            android:text="Применить"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>